# HPC-IA

./: README.md
parcial1HCP/: CMakeLists.txt  e.h  main.cpp
parcial1HCP/Debug/: CMakeCache.txt  cmake_install.cmake  parcial1HCP
parcial1HCP/Debug/.cmake/api/v1/reply/: cache-v2-9bd6eee337fbfbb9dfde.json  cmakeFiles-v1-8fd34fdcf1845799b037.json  codemodel-v2-91d0548c38f110fc0cb7.json  index-2022-03-09T16-40-04-0138.json  target-parcial1HCP-Debug-da6670563b383aa1ea8a.json
parcial1HCP/FUNCIONES/: fm.cpp  fm.h
